# wekruit-matching

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .impeccable.md  .infisical.json  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  SCRAPE-FAULT-TOLERANCE.md  alembic.ini  docker-compose.yml  pyproject.toml  start-server.sh  url-resolution-validation.csv
.planning/: DATA-INTEGRITY-AUDIT-2026-05-29.md  GOAL-apply-url-cleanup.md  JOB-QUALITY-FINDINGS-2026-05-29.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v2.0-DELIB.md
.playwright-cli/: page-2026-04-01T04-47-36-449Z.yml  page-2026-04-01T04-48-22-859Z.yml  page-2026-04-01T04-48-24-012Z.yml  page-2026-04-01T06-19-55-150Z.yml  page-2026-04-01T06-20-59-759Z.yml  page-2026-04-01T06-21-43-740Z.yml  page-2026-04-01T06-21-47-140Z.yml  page-2026-04-01T06-21-50-455Z.yml  page-2026-04-01T06-21-53-712Z.yml  page-2026-04-01T06-21-56-968Z.yml  page-2026-04-01T06-22-01-014Z.yml  page-2026-04-01T06-22-07-604Z.yml  page-2026-04-01T06-22-10-827Z.yml  page-2026-04-01T06-22-17-038Z.yml  page-2026-04-01T06-22-23-413Z.yml  page-2026-04-01T06-22-26-750Z.yml  page-2026-04-01T06-22-30-044Z.yml  page-2026-04-01T06-22-33-354Z.yml  page-2026-04-01T06-22-36-631Z.yml  page-2026-04-01T06-22-39-917Z.yml  page-2026-04-01T06-22-46-857Z.yml  page-2026-04-01T06-22-50-296Z.yml  page-2026-04-01T06-22-53-517Z.yml  page-2026-04-01T06-22-56-856Z.yml  page-2026-04-01T06-23-00-272Z.yml  page-2026-04-01T06-23-04-481Z.yml  page-2026-04-01T06-23-10-811Z.yml  page-2026-04-01T06-23-14-384Z.yml  page-2026-04-01T06-23-17-910Z.yml  page-2026-04-01T06-23-24-480Z.yml  page-2026-04-01T06-23-27-991Z.yml  page-2026-04-01T06-23-31-404Z.yml  page-2026-04-01T06-23-34-891Z.yml  page-2026-04-01T06-23-38-330Z.yml  page-2026-04-01T06-23-41-822Z.yml  page-2026-04-01T06-23-45-179Z.yml  page-2026-04-01T06-23-48-603Z.yml  page-2026-04-01T06-23-51-952Z.yml  page-2026-04-01T06-23-55-256Z.yml  page-2026-04-01T06-23-58-651Z.yml  (+33 more)
.tmp/: playwright-smoke.spec.js
alembic/: env.py
docker/: entrypoint.sh  init-db.sql
docs/: canonical-tags-sync.md
scripts/: alert-empty-skills.py  backfill_content_hash.py  backfill_role_function.py  backfill_skills.py  check-daily-ran.sh  cold_start.py  credential-monitor.sh  cron_enrichment.sh  cron_scraper.sh  daily-update.sh  data_integrity_audit.py  dedupe_fast.py  dedupe_jobs.py  e2e_test.py  embed_all.py  embed_only.py  install-laptop-scrape.sh  install_cron.sh  job_quality_report.py  launchd-notes.md  normalize_seniority_vocab.py  post-pipeline-webhook.sh  reconcile_dead_inactive.py  reconcile_firestore_stale_active.py  resolve_1k_test.py  resolve_200_serper.py  resolve_jobright_ats.py  sync_chunked.py  sync_jobs_bulk.py
tests/: conftest.py  test_ats_enricher.py  test_config.py  test_daily_reliability_gate.py  test_daily_update_guard.py  (+68 more)
(+198 files in other folders)
