[project]
name = "wekruit-matching"
version = "0.1.0"
description = "Backend pipeline: scrapes job listings, enriches with LLM metadata, returns ranked matches against user profiles"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.4.2",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "httpx>=0.28.1",
    "anthropic>=0.86,<1.0",
    "openai>=2.30,<3.0",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
    "loguru>=0.7",
    "python-dateutil>=2.0",
    "mistune>=3.0",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "slowapi>=0.1.9",
    # P7-K (2026-05-09) Stage 0 reads Firestore dead-flags into Postgres tombstone
    "google-cloud-firestore>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wekruit_matching"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Per-test wall-clock cap (pytest-timeout). A hung network test — e.g. the e2e
# smoke reaching out to an ATS — then fails fast instead of stalling CI until
# the GitHub job timeout. Override per-test with @pytest.mark.timeout(N).
timeout = 300
markers = [
    "integration: marks tests that require a live DATABASE_URL (deselect with '-m not integration')",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
